--- a/app/views/poems/edit.html.erb
+++ b/app/views/poems/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', get_poems_path %> |
-<%= link_to 'Back', get_poems_path %>
+<%= link_to 'Show', poems_path %> |
+<%= link_to 'Back', poems_path %>
