--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Poems</h1>
-<p>git flow test_2</p>
+<p>git monitering test_1</p>
 
 <table>
   <thead>
